5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1644_2445.log
== SUBMITION (2019-06-06 10:50:45) 
-- CODE:
c = input('ESCALA: ')
t = float(input('TEMPERATURA: '))

if(c.upper() == 'F'):
	c=5/9 * (t-32)
	print(round(c, 2))
if(c.upper() == 'c'):
	v=(t * 9/5) + 32
	print(round(v, 2))
-- EXECUTION TIME:
0.568162
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:

-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
ESCALA: TEMPERATURA: 160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
ESCALA: TEMPERATURA:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 13:54:13) 
-- CODE:
C=input("ESCALA: ")
T=float(input("TEMPERATURA: "))

if(c.upper() == "F"): 
	c=5/9 * (T-32)
	print(round(C, 2))
if(c.upper() == "C"): 
	v=(T * 9/5) + 32
	print(round(v, 2))
-- EXECUTION TIME:
0.46441
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2445/main.py", line 4, in <module>
    if(c.upper() == "F"): 
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:55:22) 
-- CODE:
C=input("ESCALA: ")
T=float(input("TEMPERATURA: "))

if(c.upper() == "F"): 
	c=5/9 * (T-32)
	print(round(C, 2))
if(c.upper() == "C"): 
	v=(T * 9/5)+32
	print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(c.upper() == "F"): 
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:56:05) 
-- CODE:
C=input("ESCALA: ")
T=float(input("TEMPERATURA: "))

if(c.upper() == "f"): 
	c=5/9 * (T-32)
	print(round(C, 2))
if(c.upper() == "C"): 
	v=(T * 9/5)+32
	print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(c.upper() == "f"): 
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 13:56:54) 
-- CODE:
C=input("ESCALA: ")
T=float(input("TEMPERATURA: "))

if(c.upper() == "F"
	c=5/9 * (T-32)
	print(round(C, 2))
if(c.upper() == "C"): 
	v=(T * 9/5)+32
	print(round(v, 2))
-- EXECUTION TIME:
0.772473
-- ERROR:
  File "/home/codebench/codes/1644/2445/main.py", line 5
    c=5/9 * (T-32)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 13:57:46) 
-- CODE:
c=input("ESCALA: ")
T=float(input("TEMPERATURA: "))

if(c.upper() == "F"
	c=5/9 * (T-32)
	print(round(C, 2))
if(c.upper() == "c"): 
	v=(T * 9/5)+32
	print(round(v, 2))
-- EXECUTION TIME:
0.761744
-- ERROR:
  File "/home/codebench/codes/1644/2445/main.py", line 5
    c=5/9 * (T-32)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 13:58:21) 
-- CODE:
c=input("ESCALA: ")
T=float(input("TEMPERATURA: "))

if(c.upper() == "F"
	c=5/9 * (T-32)
	print(round(c, 2))
if(c.upper() == "c"): 
	v=(T * 9/5)+32
	print(round(v, 2))
-- EXECUTION TIME:
0.783299
-- ERROR:
  File "/home/codebench/codes/1644/2445/main.py", line 5
    c=5/9 * (T-32)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:02:55) 
-- CODE:
c = input('ESCALA: ')
T = float(input('TEMPERATUA: '))

if(c,upper() == 'F'): 
	C=5/9*(T-32)
	print(round(C, 2))
if(c.upper() == 'C'):
	v=(T * 9/5) + 32
	print(round(v, 2))
-- EXECUTION TIME:
0.672681
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2445/main.py", line 4, in <module>
    if(c,upper() == 'F'): 
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:03:05) 
-- CODE:
c = input('ESCALA: ')
T = float(input('TEMPERATUA: '))

if(c,upper() == 'F'): 
	C=5/9*(T-32)
	print(round(C, 2))
if(c.upper() == 'C'):
	v=(T * 9/5) + 32
	print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(c,upper() == 'F'): 
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:03:31) 
-- CODE:
c = input('ESCALA: ')
T = float(input('TEMPERATUA: '))

if(c.upper() == 'F'): 
	C=5/9*(T-32)
	print(round(C, 2))
if(c.upper() == 'C'):
	v=(T * 9/5) + 32
	print(round(v, 2))
-- EXECUTION TIME:
0.746459
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
